# MiniRTMP

./: CMakeLists.txt
src/: main.cpp
src/network/: socket.cpp  socket.h
src/protocol/: RtmpMessage.h  handshake.cpp  handshake.h
src/server/: acceptor.cpp  acceptor.h  server.cpp  server.h  session.cpp  session.h
src/utils/: logger.cpp  logger.h
